tests/NormalTests/paczka1/small_fuzzy/10207668.err
Error in line 4: KOHZb S634 96,6
Error in line 2: B5pH S156 96,5
